powertop (2.4-2) UNRELEASED; urgency=low

  * debian/copyright: Add missing copyright notices.
  * Add myself as co-maintainer.
  * Add postrm script to remove /var/cache/powertop when purging
    (Closes: #680510).
  * Change architecture to linux-any, since it is a linux specific package.
  * Change package description to something more descriptive.

 -- Julian Wollrath <jwollrath@web.de>  Mon, 02 Sep 2013 17:36:42 -0400

powertop (2.4-1) unstable; urgency=low

  * New upstream release (Closes: #685607, #695893, #659517, #686699, #705993)
  * debian/control:
    + Jose Luis Rivas's email to `ghostbar@debian.org`.
    + Remove build-dependency on `cdbs`. No need anymore.
    + Add dependency on `automake` so `config.{guess,sub}` are auto-updated on
    build.
    + Standards-Version to 3.9.4.
    + Swap on fields maintainer and uploaders.
    + Add Vcs-* fields.
  * debian/watch: upstream changed to `tar.gz` from `tar.bz2`, so reports on
    newer versions were failing to be accurate. (Closes: #695891)
  * Acknowledging NMU's.
  * debian/rules: Simple dh format.
  * debian/patches: changes applied upstream. No need anymore.
  * debian/copyright: update to copyright-format/1.0

 -- Jose Luis Rivas <ghostbar@debian.org>  Fri, 30 Aug 2013 22:47:26 -0430

powertop (2.0-0.3) unstable; urgency=high

  * Non-maintainer upload.
  * Add patch long-process-names-nullterm.patch to prevent a crash
    on paticularly long process names (Closes: #682388)

 -- Jonathan Wiltshire <jmw@debian.org>  Sun, 21 Apr 2013 00:38:10 +0100

powertop (2.0-0.2) unstable; urgency=low

  * Non-maintainer upload.
  * Drop debian/patches/fix_libnl_version.patch. This patch actually doesn't
    make any sense and only causes a FTBFS on ia64 since it modifies
    configure.ac without properly updating the build system afterwards.
    (Closes: #679629)

 -- Michael Biebl <biebl@debian.org>  Sat, 30 Jun 2012 16:13:46 +0200

powertop (2.0-0.1) unstable; urgency=low

  * Non-maintainer upload.