@@ -24,3 +24,21 @@ Description: diagnose issues with power consumption and management
  for higher-than-needed power consumption, ranging from software
  applications to active components in the system. Detailed screens are
  available for CPU C and P states, device activity, and software activity.
+
+Package: powertop-dbg
+Architecture: linux-any
+Section: debug
+Depends: powertop (=${binary:Version}), ${misc:Depends}
+Description: debugging symbols for powertop
+ PowerTOP is a Linux tool to diagnose issues with power consumption and
+ power management. In addition to being a diagnostic tool, PowerTOP also
+ has an interactive mode you can use to experiment with various power
+ management settings, for cases where the Linux distribution has not
+ enabled those settings.
+ .
+ PowerTOP reports which components in the system are most likely to blame
+ for higher-than-needed power consumption, ranging from software
+ applications to active components in the system. Detailed screens are
+ available for CPU C and P states, device activity, and software activity.
+ .
+ This package contains the debugging symbols for powertop.
