@@ -6,6 +6,7 @@ powertop (2.4-2) UNRELEASED; urgency=low
     (Closes: #680510).
   * Change architecture to linux-any, since it is a linux specific package.
   * Change package description to something more descriptive.
+  * Add debug package (Closes: #679579).
 
  -- Julian Wollrath <jwollrath@web.de>  Mon, 02 Sep 2013 17:36:42 -0400
 
